--- a/index.html
+++ b/index.html
@@ -87,23 +87,13 @@
                         <span class="hero__title-secondary">y Construcción SPA</span>
                     </h1>
                     <p class="hero__subtitle">
-                        Construyendo el futuro con excelencia, innovación y compromiso. 
+                        Construyendo el futuro con excelencia, innovación y compromiso.
                         Más de una década transformando ideas en realidades sólidas.
                     </p>
                     <div class="hero__buttons">
                         <a href="#servicios" class="hero__cta hero__cta--highlight">Nuestros Servicios</a>
                         <a href="https://api.whatsapp.com/send?phone=56912345678&text=Hola,%20me%20interesa%20obtener%20información%20sobre%20sus%20servicios%20de%20construcción%20e%20ingeniería." 
                            class="hero__cta hero__cta-secondary hero__cta--highlight" target="_blank" rel="noopener noreferrer">Solicitar Cotización</a>
-                    </div>
-
-                    <!-- Flecha de scroll down animada -->
-                    <div class="hero__scroll">
-                        <a href="#quienes-somos" class="hero__scroll-link">
-                            <svg class="hero__scroll-icon" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 5v14M5 12l7 7 7-7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            <span class="hero__scroll-text">Scroll</span>
-                        </a>
                     </div>
                 </div>
             </div>
@@ -134,7 +124,7 @@
 
                 <div class="about__content">
                     <!-- Misión -->
-                    <div class="about__card">
+                    <div class="about__card about__card--mission">
                         <div class="about__card-icon">
                             <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M12 2L2 7v10c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V7l-10-5z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -149,7 +139,7 @@
                     </div>
 
                     <!-- Visión -->
-                    <div class="about__card">
+                    <div class="about__card about__card--vision">
                         <div class="about__card-icon">
                             <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -165,7 +155,7 @@
                     </div>
 
                     <!-- Valores -->
-                    <div class="about__card">
+                    <div class="about__card about__card--values">
                         <div class="about__card-icon">
                             <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
