--- a/index.html
+++ b/index.html
@@ -126,9 +126,7 @@
                     <!-- Misión -->
                     <div class="about__card about__card--mission">
                         <div class="about__card-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 2L2 7v10c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V7l-10-5z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
+                            <img src="./assets/img/nuestra_mision.gif" alt="Nuestra Misión" width="48" height="48">
                         </div>
                         <h3 class="about__card-title">Nuestra Misión</h3>
                         <p class="about__card-text">
@@ -141,10 +139,7 @@
                     <!-- Visión -->
                     <div class="about__card about__card--vision">
                         <div class="about__card-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2"/>
-                            </svg>
+                            <img src="./assets/img/nuestra_vision.gif" alt="Nuestra Visión" width="48" height="48">
                         </div>
                         <h3 class="about__card-title">Nuestra Visión</h3>
                         <p class="about__card-text">
@@ -157,9 +152,7 @@
                     <!-- Valores -->
                     <div class="about__card about__card--values">
                         <div class="about__card-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
+                            <img src="./assets/img/nuestros_valores.gif" alt="Nuestros Valores" width="48" height="48">
                         </div>
                         <h3 class="about__card-title">Nuestros Valores</h3>
                         <p class="about__card-text">
