navbar: vista mobile

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
         <section class="hero" id="home">
             <div class="hero__container container">
                 <div class="hero__content">
+                    <div class="hero__logo" aria-hidden="true">
+                        <img src="./assets/img/logo.jpeg" alt="JJ Ingeniería y Construcción SPA" class="hero__logo-img">
+                    </div>
                     <h1 class="hero__title">
                         <span class="hero__title-primary">JJ Ingeniería</span>
                         <span class="hero__title-secondary">y Construcción SPA</span>
@@ -90,11 +93,6 @@
                         Construyendo el futuro con excelencia, innovación y compromiso.
                         Más de una década transformando ideas en realidades sólidas.
                     </p>
-                    <div class="hero__buttons">
-                        <a href="#servicios" class="hero__cta hero__cta--highlight">Nuestros Servicios</a>
-                        <a href="https://api.whatsapp.com/send?phone=56912345678&text=Hola,%20me%20interesa%20obtener%20información%20sobre%20sus%20servicios%20de%20construcción%20e%20ingeniería." 
-                           class="hero__cta hero__cta-secondary hero__cta--highlight" target="_blank" rel="noopener noreferrer">Solicitar Cotización</a>
-                    </div>
                 </div>
             </div>
             <!-- Background decorativo -->
@@ -113,12 +111,12 @@
                 <div class="section__header">
                     <h2 class="section__title">Nosotros</h2>
                     <p class="section__subtitle">
-                        EN JJ INGENIERÍA Y CONSTRUCCIÓN SPA COMPRENDEMOS QUE CADA
-                        PROYECTO REPRESENTA UNA OPORTUNIDAD PARA CONSTRUIR EL FUTURO.
-                        NUESTRO COMPROMISO SE BASA EN TRABAJAR DE MANERA CERCANA Y
-                        COLABORATIVA CON CADA CLIENTE, ASEGURANDO QUE CADA DETALLE
-                        REFLEJE SUS NECESIDADES, EXPECTATIVAS Y OBJETIVOS ESTRATÉGICOS. <br><br>
-                        DESDE LA PLANIFICACIÓN INICIAL HASTA LA ENTREGA FINAL, APLICAMOS UN ENFOQUE INTEGRAL QUE GARANTIZA RESULTADOS DE EXCELENCIA, SUSTENTABILIDAD Y DURABILIDAD, GENERANDO VALOR TANGIBLE EN CADA OBRA EJECUTADA.
+                        En JJ Ingeniería y Construcción Spa comprendemos que cada
+                        proyecto representa una oportunidad para construir el futuro.
+                        Nuestro compromiso se basa en trabajar de manera cercana y
+                        colaborativa con cada cliente, asegurando que cada detalle
+                        refleje sus necesidades, expectativas y objetivos estratégicos. <br><br>
+                        Desde la planificación inicial hasta la entrega final, aplicamos un enfoque integral que garantiza resultados de excelencia, sustentabilidad y durabilidad, generando valor tangible en cada obra ejecutada.
                     </p>
                 </div>
 
