--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <h3 class="business-area__title business-area__title--detailed">Consultoría en Proyectos de Construcción</h3>
                         <div class="business-area__body">
                             <div class="business-area__image">
-                                <img src="./assets/img/galeria/consultortia en proyectos de construccion.jpeg" alt="Consultoría en Proyectos de Construcción - Equipo de profesionales trabajando en oficina con vista a obra en construcción" class="business-area__img">
+                                <img src="./assets/img/galeria/consultoria en proyectos de construccion.jpeg" alt="Consultoría en Proyectos de Construcción - Equipo de profesionales trabajando en oficina con vista a obra en construcción" class="business-area__img">
                             </div>
                             <div class="business-area__description">
                                 <p>Ofrecemos servicios especializados de consultoría para proyectos de construcción, brindando asesoramiento técnico integral desde la planificación inicial hasta la ejecución final. Nuestro equipo de expertos evalúa la viabilidad técnica, optimiza recursos y garantiza el cumplimiento de normativas vigentes.</p>
@@ -320,7 +320,7 @@
                                 <p>Ofrecemos servicios de consultoría técnica, estudios hidrológicos, diseño de infraestructura hídrica y supervisión de obras. Trabajamos con tecnología avanzada y metodologías innovadoras para garantizar la optimización del uso del agua y el cumplimiento de normativas ambientales.</p>
                             </div>
                             <div class="business-area__image">
-                                <img src="./assets/img/galeria/Ingeniería y Consultoría en Proyectos Hídricos.jpeg" alt="Ingeniería y Consultoría en Proyectos Hídricos - Sistemas de riego y gestión del agua" class="business-area__img">
+                                <img src="./assets/img/galeria/Ingenieria y Consultoria en Proyectos Hidricos.jpeg" alt="Ingeniería y Consultoría en Proyectos Hídricos - Sistemas de riego y gestión del agua" class="business-area__img">
                             </div>
                         </div>
                         <div class="business-area__action">
