--- a/index.html
+++ b/index.html
@@ -182,6 +182,24 @@
         </section>
 
         <!-- ===================================
+             GALERÍA CTA
+             =================================== -->
+        <section class="cta-gallery" id="galeria-cta">
+            <div class="container">
+                <div class="section__header">
+                    <h2 class="section__title" style="margin-top: var(--spacing-lg);">Explora Nuestra Galería</h2>
+                    <p class="section__subtitle">Conoce nuestros proyectos y servicios en acción. Descubre imágenes reales de nuestras obras, equipos y áreas de trabajo.</p>
+                </div>
+
+                <!-- cta-gallery__grid eliminado a petición: sin imágenes en CTA -->
+
+                <div class="cta-gallery__action" style="text-align: center;">
+                    <a href="galeria.html" class="btn btn--primary">Ver Galería</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- ===================================
              ÁREAS DE NEGOCIO - SECCIÓN CONTENEDORA
              =================================== -->
         <section class="business-areas-container" id="areas-negocio">
