--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                             <li class="nav__dropdown-item">
                                 <a href="#consultoria-agricola" class="nav__dropdown-link">Consultoría Agrícola</a>
                             </li>
+                            <li>
+                                <a href="#asesoria-proyectos-agricolas" class="nav__dropdown-link">Asesoría en Proyectos Agrícolas</a>
+                           </li>
                             <li class="nav__dropdown-item">
                                 <a href="#proyectos-hidricos" class="nav__dropdown-link">Ingeniería y Consultoría en Proyectos Hídricos</a>
                             </li>
@@ -249,7 +252,7 @@
                 <div class="container">
                     <div class="business-area__content business-area__content--detailed">
                         <h3 class="business-area__title business-area__title--detailed">Consultoría en Proyectos de Construcción</h3>
-                        <div class="business-area__body">
+                        <div class="business-area__body business-area__body--reverse">
                             <div class="business-area__image">
                                 <img src="./assets/img/galeria/consultoria en proyectos de construccion.jpeg" alt="Consultoría en Proyectos de Construcción - Equipo de profesionales trabajando en oficina con vista a obra en construcción" class="business-area__img">
                             </div>
@@ -272,7 +275,7 @@
                 <div class="container">
                     <div class="business-area__content business-area__content--detailed">
                         <h3 class="business-area__title business-area__title--detailed">Construcción en Obras Civiles</h3>
-                        <div class="business-area__body business-area__body--reverse">
+                        <div class="business-area__body">
                             <div class="business-area__description">
                                 <p>Nos especializamos en la construcción de obras civiles de gran envergadura, incluyendo infraestructura vial, puentes, sistemas de drenaje y obras hidráulicas. Nuestro equipo técnico cuenta con amplia experiencia en proyectos que requieren precisión ingenieril y cumplimiento de estrictas normativas de seguridad.</p>
                                 <p>Ejecutamos proyectos desde la fase de diseño hasta la entrega final, garantizando calidad constructiva, durabilidad y eficiencia en cada obra. Trabajamos con tecnología de vanguardia y materiales de primera calidad para asegurar resultados excepcionales.</p>
@@ -351,18 +354,39 @@
                 </div>
             </section>
 
-            <!-- Sección 6: Ingeniería y Consultoría en Proyectos Hídricos -->
+            <!-- Sección 6: Asesoría en Proyectos Agrícolas -->
+            <section id="asesoria-proyectos-agricolas" class="business-area-section business-area-section--detailed business-area-section--asesoria-agricola" data-area="asesoria-proyectos-agricolas">
+                <div class="container">
+                    <div class="business-area__content business-area__content--detailed">
+                        <h3 class="business-area__title business-area__title--detailed">Asesoría en Proyectos Agrícolas</h3>
+                        <div class="business-area__body business-area__body--reverse">
+                            <div class="business-area__description">
+                                <p>Ofrecemos servicios especializados de asesoría integral para el desarrollo y optimización de proyectos agrícolas. Nuestro equipo multidisciplinario combina conocimientos técnicos avanzados con experiencia práctica para brindar soluciones innovadoras que maximicen la productividad y sostenibilidad de sus cultivos.</p>
+                                <p>Desarrollamos planes estratégicos personalizados que incluyen análisis de factibilidad técnica y económica, diseño de sistemas de producción eficientes, implementación de tecnologías de precisión y gestión integral de recursos. Acompañamos cada proyecto desde la conceptualización hasta la puesta en marcha, garantizando resultados exitosos y rentables.</p>
+                            </div>
+                            <div class="business-area__image">
+                                <img src="./assets/img/galeria/asesoria en proyectros agricolas.jpeg" alt="Asesoría en Proyectos Agrícolas - Consultoría especializada en desarrollo agrícola" class="business-area__img">
+                            </div>
+                        </div>
+                        <div class="business-area__action">
+                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Asesoría%20en%20Proyectos%20Agrícolas" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Sección 7: Ingeniería y Consultoría en Proyectos Hídricos -->
             <section id="proyectos-hidricos" class="business-area-section business-area-section--detailed business-area-section--hidricos" data-area="proyectos-hidricos">
                 <div class="container">
                     <div class="business-area__content business-area__content--detailed">
                         <h3 class="business-area__title business-area__title--detailed">Ingeniería y Consultoría en Proyectos Hídricos</h3>
-                        <div class="business-area__body business-area__body--reverse">
+                        <div class="business-area__body">
+                            <div class="business-area__image">
+                                <img src="./assets/img/galeria/ingenieria y consultoria en proyectos hidricos.jpeg" alt="Ingeniería y Consultoría en Proyectos Hídricos - Sistemas de agua especializados" class="business-area__img">
+                            </div>
                             <div class="business-area__description">
                                 <p>Especializados en el diseño y ejecución de proyectos hídricos integrales, incluyendo sistemas de captación, tratamiento y distribución de agua. Desarrollamos soluciones técnicas para proyectos de riego, drenaje, plantas de tratamiento y obras de control de aguas.</p>
                                 <p>Nuestro equipo de ingenieros hidráulicos combina experiencia técnica con conocimiento de normativas ambientales para crear sistemas eficientes y sostenibles. Ofrecemos desde estudios de factibilidad hasta la supervisión completa de obras hídricas de gran envergadura.</p>
-                            </div>
-                            <div class="business-area__image">
-                                <img src="./assets/img/galeria/ingenieria y consultoria en proyectos hidricos.jpeg" alt="Ingeniería y Consultoría en Proyectos Hídricos - Sistemas de agua especializados" class="business-area__img">
                             </div>
                         </div>
                         <div class="business-area__action">
@@ -372,18 +396,18 @@
                 </div>
             </section>
 
-            <!-- Sección 7: Aseo Industrial -->
+            <!-- Sección 8: Aseo Industrial -->
             <section id="aseo-industrial" class="business-area-section business-area-section--detailed business-area-section--aseo" data-area="aseo-industrial">
                 <div class="container">
                     <div class="business-area__content business-area__content--detailed">
                         <h3 class="business-area__title business-area__title--detailed">Aseo Industrial</h3>
-                        <div class="business-area__body">
-                            <div class="business-area__image">
-                                <img src="./assets/img/galeria/Aseo Industrial.jpeg" alt="Aseo Industrial - Servicios de limpieza especializada" class="business-area__img">
-                            </div>
+                        <div class="business-area__body business-area__body--reverse">
                             <div class="business-area__description">
                                 <p>Ofrecemos servicios especializados de aseo industrial para empresas, fábricas y plantas de producción. Nuestro equipo capacitado utiliza equipos de última generación y productos químicos específicos para garantizar la limpieza profunda y desinfección de instalaciones industriales.</p>
                                 <p>Proporcionamos mantenimiento preventivo de espacios industriales, limpieza de maquinaria, desengrase de equipos y tratamiento de residuos. Cumplimos con todas las normativas de seguridad e higiene industrial, asegurando ambientes de trabajo limpios y seguros para el personal.</p>
+                            </div>
+                            <div class="business-area__image">
+                                <img src="./assets/img/galeria/Aseo Industrial.jpeg" alt="Aseo Industrial - Servicios de limpieza especializada" class="business-area__img">
                             </div>
                         </div>
                         <div class="business-area__action">
@@ -393,18 +417,18 @@
                 </div>
             </section>
 
-            <!-- Sección 8: Arriendo De Maquinarias -->
+            <!-- Sección 9: Arriendo De Maquinarias -->
             <section id="arriendo-maquinarias" class="business-area-section business-area-section--detailed business-area-section--maquinarias" data-area="arriendo-maquinarias">
                 <div class="container">
                     <div class="business-area__content business-area__content--detailed">
                         <h3 class="business-area__title business-area__title--detailed">Arriendo De Maquinarias</h3>
-                        <div class="business-area__body business-area__body--reverse">
+                        <div class="business-area__body">
+                            <div class="business-area__image">
+                                <img src="./assets/img/galeria/arriendo de maquinaria.jpeg" alt="Arriendo De Maquinarias - Equipos especializados para construcción" class="business-area__img">
+                            </div>
                             <div class="business-area__description">
                                 <p>Ofrecemos un amplio catálogo de maquinarias y equipos especializados para proyectos de construcción, minería y obras civiles. Nuestro parque de maquinarias incluye excavadoras, retroexcavadoras, grúas, compactadores, generadores y equipos de movimiento de tierra de las mejores marcas del mercado.</p>
                                 <p>Proporcionamos servicios de arriendo con operador calificado, mantenimiento preventivo incluido y soporte técnico 24/7. Todas nuestras máquinas cumplen con los más altos estándares de seguridad y eficiencia, garantizando el éxito de sus proyectos con equipos confiables y en óptimas condiciones.</p>
-                            </div>
-                            <div class="business-area__image">
-                                <img src="./assets/img/galeria/arriendo de maquinaria.jpeg" alt="Arriendo De Maquinarias - Equipos especializados para construcción" class="business-area__img">
                             </div>
                         </div>
                         <div class="business-area__action">
