--- a/galeria.html
+++ b/galeria.html
@@ -160,6 +160,14 @@
                         <img src="./assets/img/galeria/construccion-viviendas.jpeg" alt="Construcción de Viviendas" class="gallery__image">
                         <figcaption class="gallery__caption">Construcción de Viviendas</figcaption>
                     </figure>
+                    <figure class="gallery__item">
+                        <img src="./assets/img/galeria/construccion en obras civiles (1).jpg" alt="Construcción en Obras Civiles - Proyecto 1" class="gallery__image">
+                        <figcaption class="gallery__caption">Construcción en Obras Civiles - Proyecto 1</figcaption>
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="./assets/img/galeria/construccion en obras civiles (2).jpg" alt="Construcción en Obras Civiles - Proyecto 2" class="gallery__image">
+                        <figcaption class="gallery__caption">Construcción en Obras Civiles - Proyecto 2</figcaption>
+                    </figure>
                 </div>
             </div>
         </section>
@@ -198,6 +206,22 @@
                         <img src="./assets/img/galeria/camara filmacion pozo de agua.jpeg" alt="Cámara Filmación Pozo de Agua" class="gallery__image">
                         <figcaption class="gallery__caption">Cámara Filmación Pozo de Agua</figcaption>
                     </figure>
+                    <figure class="gallery__item">
+                        <img src="./assets/img/galeria/CONSULTORIA AGRICOLA 2.jpg" alt="Consultoría Agrícola - Proyecto 2" class="gallery__image">
+                        <figcaption class="gallery__caption">Consultoría Agrícola - Proyecto 2</figcaption>
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="./assets/img/galeria/asesoria en proyectros agricolas.jpeg" alt="Asesoría en Proyectos Agrícolas" class="gallery__image">
+                        <figcaption class="gallery__caption">Asesoría en Proyectos Agrícolas</figcaption>
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="./assets/img/galeria/asesoria proyectos agricolas1.jpeg" alt="Asesoría en Proyectos Agrícolas - Proyecto 1" class="gallery__image">
+                        <figcaption class="gallery__caption">Asesoría en Proyectos Agrícolas - Proyecto 1</figcaption>
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="./assets/img/galeria/asesoria proyectos agricolas2.jpeg" alt="Asesoría en Proyectos Agrícolas - Proyecto 2" class="gallery__image">
+                        <figcaption class="gallery__caption">Asesoría en Proyectos Agrícolas - Proyecto 2</figcaption>
+                    </figure>
                 </div>
             </div>
         </section>
@@ -219,6 +243,14 @@
                     <figure class="gallery__item">
                         <img src="./assets/img/galeria/Aseo Industrial.jpeg" alt="Aseo Industrial" class="gallery__image">
                         <figcaption class="gallery__caption">Aseo Industrial</figcaption>
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="./assets/img/galeria/Aseo-Industrial_3.jpeg" alt="Aseo Industrial - Proyecto 3" class="gallery__image">
+                        <figcaption class="gallery__caption">Aseo Industrial - Proyecto 3</figcaption>
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="./assets/img/galeria/arriendo maquinaria.jpeg" alt="Arriendo de Maquinaria - Proyecto 2" class="gallery__image">
+                        <figcaption class="gallery__caption">Arriendo de Maquinaria - Proyecto 2</figcaption>
                     </figure>
                 </div>
             </div>
@@ -277,13 +309,6 @@
                             </svg>
                             Volver al Inicio
                         </a>
-                        <a href="https://api.whatsapp.com/send?phone=56912345678&text=Hola,%20me%20interesa%20obtener%20información%20sobre%20sus%20servicios." 
-                           class="btn btn--secondary" target="_blank" rel="noopener noreferrer">
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.488"/>
-                            </svg>
-                            Contactar
-                        </a>
                     </div>
                 </div>
             </div>
@@ -331,16 +356,14 @@
                         </div>
                     </div>
                     
-                    <!-- Botón de Transbank -->
-                    <div class="footer__payment">
-                        <a href="https://www.webpay.cl/form-pay/327228?utm_source=transbank&utm_medium=portal3.0&utm_campaign=link_portal" class="btn btn--secondary btn--small footer__transbank-btn" target="_blank" rel="noopener noreferrer">
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                                <path d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2zm0 14H4v-6h16v6zm0-10H4V6h16v2z"/>
-                                <path d="M6 14h2v2H6zm3 0h5v2H9z"/>
-                            </svg>
-                            Pague aquí
-                        </a>
-                    </div>
+                        <!-- Botón de pago Transbank -->
+                        <div class="footer__payment" style="margin-top: 50px;">
+                            <button style="background: none; border: none; padding: 0;">
+                                <a href="https://www.webpay.cl/form-pay/327228?utm_source=transbank&utm_medium=portal3.0&utm_campaign=link_portal" style="display: block; text-decoration: none;">
+                                    <img src="./assets/img/transbank.jpeg" alt="Transbank - Pague Aquí" style="max-width: 160px; height: auto; border-radius: 5px;">
+                                </a>
+                            </button>
+                        </div>
                 </div>
 
                 <!-- COLUMNA 2: Servicios y Enlaces -->
@@ -360,8 +383,9 @@
                         <ul class="footer__list">
                             <li><a href="index.html#inicio" class="footer__link">Inicio</a></li>
                             <li><a href="index.html#servicios" class="footer__link">Servicios</a></li>
-                            <li><a href="index.html#nosotros" class="footer__link">Nosotros</a></li>
-                            <li><a href="index.html#equipo" class="footer__link">Equipo</a></li>
+                            <li><a href="index.html#quienes-somos" class="footer__link">Nosotros</a></li>
+                            <li><a href="index.html#galeria-cta" class="footer__link">Galeria</a></li>
+                            <li><a href="index.html#areas-negocio" class="footer__link">Áreas de Negocio</a></li>
                         </ul>
                     </div>
                 </div>
@@ -377,7 +401,8 @@
                             </svg>
                             <div class="footer__contact-info">
                                 <strong>Dirección:</strong>
-                                <span>Av. Providencia 1234, Santiago, Chile</span>
+                                <span>Av. linderos 4338, Arica, Chile</span>
+                                <span>Estado 215 , off 1110 , Santiago, Chile</span>
                             </div>
                         </li>
                         <li class="footer__contact-item">
