--- a/index.html
+++ b/index.html
@@ -528,8 +528,28 @@
                             </svg>
                             <div class="footer__contact-info">
                                 <strong>Dirección:</strong>
-                                <span>Av. linderos 4338, Arica, Chile</span>
-                                <span>Estado 215 , off 1110 , Santiago, Chile</span>
+                                <div class="footer__address-item">
+                                    <span>Av. linderos 4338, Arica, Chile</span>
+                                    <a href="https://maps.google.com/?q=Av.+linderos+4338,+Arica,+Chile" 
+                                       target="_blank" rel="noopener noreferrer" class="footer__map-link">
+                                        <svg width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
+                                            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                                            <circle cx="12" cy="10" r="3"/>
+                                        </svg>
+                                        Ver mapa
+                                    </a>
+                                </div>
+                                <div class="footer__address-item">
+                                    <span>Estado 215 , off 1110 , Santiago, Chile</span>
+                                    <a href="https://maps.google.com/?q=Estado+215,+off+1110,+Santiago,+Chile" 
+                                       target="_blank" rel="noopener noreferrer" class="footer__map-link">
+                                        <svg width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
+                                            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                                            <circle cx="12" cy="10" r="3"/>
+                                        </svg>
+                                        Ver mapa
+                                    </a>
+                                </div>
                             </div>
                         </li>
                         <li class="footer__contact-item">
