--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             </div>
                         </div>
                         <div class="business-area__action">
-                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Consultoría%20en%20Proyectos%20de%20Construcción" target="_blank" class="btn btn--primary btn--whatsapp">
+                            <a href="https://wa.me/56966717456?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Consultoría%20en%20Proyectos%20de%20Construcción" target="_blank" class="btn btn--primary btn--whatsapp">
                                 Me interesa
                             </a>
                         </div>
@@ -282,7 +282,7 @@
                             </div>
                         </div>
                         <div class="business-area__action">
-                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Construcción%20en%20Obras%20Civiles" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
+                            <a href="https://wa.me/56966717456?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Construcción%20en%20Obras%20Civiles" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
                         </div>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                             </div>
                         </div>
                         <div class="business-area__action">
-                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Ingeniería%20y%20Proyectos" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
+                            <a href="https://wa.me/56966717456?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Ingeniería%20y%20Proyectos" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
                         </div>
                     </div>
                 </div>
@@ -324,7 +324,7 @@
                             </div>
                         </div>
                         <div class="business-area__action">
-                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Transporte%20y%20Logística" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
+                            <a href="https://wa.me/56966717456?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Transporte%20y%20Logística" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
                         </div>
                     </div>
                 </div>
@@ -345,7 +345,7 @@
                             </div>
                         </div>
                         <div class="business-area__action">
-                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Consultoría%20Agrícola" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
+                            <a href="https://wa.me/56966717456?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Consultoría%20Agrícola" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
                         </div>
                     </div>
                 </div>
@@ -366,7 +366,7 @@
                             </div>
                         </div>
                         <div class="business-area__action">
-                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Asesoría%20en%20Proyectos%20Agrícolas" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
+                            <a href="https://wa.me/56966717456?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Asesoría%20en%20Proyectos%20Agrícolas" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
                         </div>
                     </div>
                 </div>
@@ -387,7 +387,7 @@
                             </div>
                         </div>
                         <div class="business-area__action">
-                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Ingeniería%20y%20Consultoría%20en%20Proyectos%20Hídricos" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
+                            <a href="https://wa.me/56966717456?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Ingeniería%20y%20Consultoría%20en%20Proyectos%20Hídricos" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
                         </div>
                     </div>
                 </div>
@@ -408,7 +408,7 @@
                             </div>
                         </div>
                         <div class="business-area__action">
-                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Aseo%20Industrial" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
+                            <a href="https://wa.me/56966717456?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Aseo%20Industrial" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
                         </div>
                     </div>
                 </div>
@@ -429,7 +429,7 @@
                             </div>
                         </div>
                         <div class="business-area__action">
-                            <a href="https://wa.me/56912345678?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Arriendo%20De%20Maquinarias" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
+                            <a href="https://wa.me/56966717456?text=Hola,%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios%20de%20Arriendo%20De%20Maquinarias" target="_blank" class="btn btn--primary btn--whatsapp">Me interesa</a>
                         </div>
                     </div>
                 </div>
@@ -487,7 +487,7 @@
                                 class="contact-form__input"
                                 maxlength="15"
                                 required
-                                placeholder="+56 9 1234 5678"
+                                placeholder="+56 9 6671 7456"
                             >
                         </div>
 
@@ -622,8 +622,9 @@
                             <div class="footer__contact-info">
                                 <strong>Dirección:</strong>
                                 <div class="footer__address-item">
+                                    <span>Sucursal</span>
                                     <span>Av. linderos 4338, Arica, Chile</span>
-                                    <a href="https://maps.google.com/?q=Av.+linderos+4338,+Arica,+Chile" 
+                                    <a href="https://maps.google.com/?q=Av.+linderos+4338,+Arica,+Chile"
                                        target="_blank" rel="noopener noreferrer" class="footer__map-link">
                                         <svg width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
@@ -633,8 +634,9 @@
                                     </a>
                                 </div>
                                 <div class="footer__address-item">
+                                    <span>Casa Matriz</span>
                                     <span>Estado 215 , off 1110 , Santiago, Chile</span>
-                                    <a href="https://maps.google.com/?q=Estado+215,+off+1110,+Santiago,+Chile" 
+                                    <a href="https://maps.google.com/?q=Estado+215,+off+1110,+Santiago,+Chile"
                                        target="_blank" rel="noopener noreferrer" class="footer__map-link">
                                         <svg width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
@@ -651,7 +653,7 @@
                             </svg>
                             <div class="footer__contact-info">
                                 <strong>Teléfono:</strong>
-                                <a href="tel:+56912345678">+56 9 1234 5678</a>
+                                <a href="tel:+56966717456">+56 9 6671 7456</a>
                             </div>
                         </li>
                         <li class="footer__contact-item">
@@ -677,7 +679,7 @@
                     </ul>
 
                     <div class="footer__cta">
-                        <a href="https://api.whatsapp.com/send?phone=56912345678&text=Hola,%20me%20interesa%20obtener%20información%20sobre%20sus%20servicios%20de%20construcción%20e%20ingeniería." 
+                        <a href="https://api.whatsapp.com/send?phone=56966717456&text=Hola,%20me%20interesa%20obtener%20información%20sobre%20sus%20servicios%20de%20construcción%20e%20ingeniería." 
                            class="btn btn--primary btn--small" target="_blank" rel="noopener noreferrer">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.488"/>
@@ -708,7 +710,7 @@
         <!-- Botón de Transbank eliminado: ahora se encuentra en el footer -->
         
         <!-- Botón de WhatsApp -->
-        <a href="https://api.whatsapp.com/send?phone=56912345678&text=Hola,%20me%20interesa%20obtener%20información%20sobre%20sus%20servicios." 
+        <a href="https://api.whatsapp.com/send?phone=56966717456&text=Hola,%20me%20interesa%20obtener%20información%20sobre%20sus%20servicios." 
            class="floating-btn floating-btn--whatsapp" 
            target="_blank" 
            rel="noopener noreferrer"
