--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         <h3 class="business-area__title business-area__title--detailed">Ingeniería y Consultoría en Proyectos Hídricos</h3>
                         <div class="business-area__body">
                             <div class="business-area__image">
-                                <img src="./assets/img/galeria/ingenieria y consultoria en proyectos hidricos.jpeg" alt="Ingeniería y Consultoría en Proyectos Hídricos - Sistemas de agua especializados" class="business-area__img">
+                                <img src="./assets/img/galeria/Ingenieria y Consultoria en Proyectos Hidricos.jpeg" alt="Ingeniería y Consultoría en Proyectos Hídricos - Sistemas de agua especializados" class="business-area__img">
                             </div>
                             <div class="business-area__description">
                                 <p>Especializados en el diseño y ejecución de proyectos hídricos integrales, incluyendo sistemas de captación, tratamiento y distribución de agua. Desarrollamos soluciones técnicas para proyectos de riego, drenaje, plantas de tratamiento y obras de control de aguas.</p>
